--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
-    "react-redux": "^8.0.2"
+    "react-hot-toast": "^2.3.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "6",
+    "use-clipboard-copy": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
